# ProgLab6_GraphicsEditor

./: CMakeLists.txt  GraphicsController.cpp  GraphicsController.h  brush.h  canvas.cpp  canvas.h  canvasView.cpp  canvasView.h  main.cpp  shape.h  stroke.h
.github/workflows/: cmake-multi-platform.yml
